# chaotic

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: ODE.h  dataframe.h  diffeq.h  solver.h
include/diffeq/: algorithms.h  dataframe.h  diffeq.h  ode.h  solver.h
include/diffeq/algorithms/: rk.h  tableau.h  tsit.h
samples/: CMakeLists.txt  main.cpp
samples/01-pendulum/: CMakeLists.txt  README.md  pendulum.cpp
samples/utils/: line.h  shader.h
src/: CMakeLists.txt
src/solver/: ODE.cpp  dataframe.cpp  solver.cpp
